--- a/sheep.css
+++ b/sheep.css
@@ -122,7 +122,7 @@ body {
   color: white;
   letter-spacing: 0.05em;
   text-decoration: none;
-  font-size: 10px;
+  font-size: 1rem;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
