--- a/sheep.css
+++ b/sheep.css
@@ -122,7 +122,7 @@ body {
   color: white;
   letter-spacing: 0.05em;
   text-decoration: none;
-  font-size: 1rem;
+  font-size: 0.8rem;
   -webkit-transition: all 1s;
   transition: all 1s;
 }
@@ -602,6 +602,7 @@ p {
   vertical-align: top;
   margin-bottom: 300px;
   text-align: left;
+  margin-left: 70px;
 }
 
 .button2 {
@@ -789,8 +790,122 @@ p {
   }
 }
 
+/* The Modal (background) */
+.modal4 {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content4 {
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  color: white;
+  font-size: 1rem;
+}
+
+.modal-content4 p {
+  font-size: 1rem;
+}
+
+/* The Close Button */
+.close4 {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close4:hover,
+.close4:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 450px) {
   .modal-content4 {
+    width: 300px;
+  }
+}
+
+/* The Modal (background) */
+.modal5 {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content5 {
+  background-color: rgba(0, 0, 0, 0.4);
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 400px;
+  color: white;
+  font-size: 1rem;
+}
+
+.modal-content5 p {
+  font-size: 1rem;
+}
+
+/* The Close Button */
+.close5 {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close5:hover,
+.close5:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 450px) {
+  .modal-content5 {
     width: 300px;
   }
 }
@@ -866,17 +981,180 @@ p {
 }
 
 .heading-frame3 {
+  background: #333 url(https://res.cloudinary.com/djfz8onqu/image/upload/v1583163971/Lambing%20Live/lop_qtynsn.jpg) center;
+  background-size: cover;
+}
+
+.heading-frame4 {
   background: #333 url(https://res.cloudinary.com/djfz8onqu/image/upload/v1583696437/Lambing%20Live/doro_yapdoe.jpg) center;
   background-size: cover;
 }
 
-@media screen and (max-width: 450px) {
+.heading-frame5 {
+  background: #333 url(https://res.cloudinary.com/djfz8onqu/image/upload/v1583164127/Lambing%20Live/lammy_tnfdwg.jpg) center;
+  background-size: cover;
+}
+
+@media screen and (max-width: 600px) {
   .heading-frame {
     width: 200px;
     height: 200px;
   }
   .tilesWrap li {
     position: static;
+  }
+  .card {
+    margin-left: 50px;
+  }
+}
+
+.bubbly-button {
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  display: inline-block;
+  font-size: 1em;
+  padding: 1em 2em;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background-color: crimson;
+  color: #fff;
+  border-radius: 4px;
+  border: none;
+  cursor: pointer;
+  position: relative;
+  -webkit-transition: -webkit-transform ease-in 0.1s, -webkit-box-shadow ease-in 0.25s;
+  transition: -webkit-transform ease-in 0.1s, -webkit-box-shadow ease-in 0.25s;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s;
+  transition: transform ease-in 0.1s, box-shadow ease-in 0.25s, -webkit-transform ease-in 0.1s, -webkit-box-shadow ease-in 0.25s;
+  -webkit-box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
+          box-shadow: 0 2px 25px rgba(255, 0, 130, 0.5);
+  margin-left: 45%;
+}
+
+.bubbly-button:focus {
+  outline: 0;
+}
+
+.bubbly-button:before, .bubbly-button:after {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 140%;
+  height: 100%;
+  left: -20%;
+  z-index: -1000;
+  -webkit-transition: all ease-in-out 0.5s;
+  transition: all ease-in-out 0.5s;
+  background-repeat: no-repeat;
+}
+
+.bubbly-button:before {
+  display: none;
+  top: -75%;
+  background-image: radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, transparent 20%, crimson 20%, transparent 30%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, transparent 10%, crimson 15%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%);
+  background-size: 10% 10%, 20% 20%, 15% 15%, 20% 20%, 18% 18%, 10% 10%, 15% 15%, 10% 10%, 18% 18%;
+}
+
+.bubbly-button:after {
+  display: none;
+  bottom: -75%;
+  background-image: radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, transparent 10%, crimson 15%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%), radial-gradient(circle, crimson 20%, transparent 20%);
+  background-size: 15% 15%, 20% 20%, 18% 18%, 20% 20%, 15% 15%, 10% 10%, 20% 20%;
+}
+
+.bubbly-button:active {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  background-color: #c51236;
+  -webkit-box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
+          box-shadow: 0 2px 25px rgba(255, 0, 130, 0.2);
+}
+
+.bubbly-button.animate:before {
+  display: block;
+  -webkit-animation: topBubbles ease-in-out 0.75s forwards;
+          animation: topBubbles ease-in-out 0.75s forwards;
+}
+
+.bubbly-button.animate:after {
+  display: block;
+  -webkit-animation: bottomBubbles ease-in-out 0.75s forwards;
+          animation: bottomBubbles ease-in-out 0.75s forwards;
+}
+
+@-webkit-keyframes topBubbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+  }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+  }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
+  }
+}
+
+@keyframes topBubbles {
+  0% {
+    background-position: 5% 90%, 10% 90%, 10% 90%, 15% 90%, 25% 90%, 25% 90%, 40% 90%, 55% 90%, 70% 90%;
+  }
+  50% {
+    background-position: 0% 80%, 0% 20%, 10% 40%, 20% 0%, 30% 30%, 22% 50%, 50% 50%, 65% 20%, 90% 30%;
+  }
+  100% {
+    background-position: 0% 70%, 0% 10%, 10% 30%, 20% -10%, 30% 20%, 22% 40%, 50% 40%, 65% 10%, 90% 20%;
+    background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
+  }
+}
+
+@-webkit-keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+  }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+  }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+    background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
+  }
+}
+
+@keyframes bottomBubbles {
+  0% {
+    background-position: 10% -10%, 30% 10%, 55% -10%, 70% -10%, 85% -10%, 70% -10%, 70% 0%;
+  }
+  50% {
+    background-position: 0% 80%, 20% 80%, 45% 60%, 60% 100%, 75% 70%, 95% 60%, 105% 0%;
+  }
+  100% {
+    background-position: 0% 90%, 20% 90%, 45% 70%, 60% 110%, 75% 80%, 95% 70%, 110% 10%;
+    background-size: 0% 0%, 0% 0%,  0% 0%,  0% 0%,  0% 0%,  0% 0%;
+  }
+}
+
+.vote {
+  background-color: #151515;
+  margin-top: 200px;
+  width: 30%;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 20px;
+}
+
+.vote h2 {
+  margin: 0;
+  padding: 0;
+  color: white;
+  text-align: center;
+}
+
+@media screen and (max-width: 600px) {
+  .vote {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=sheep.css.map */
